# weather-dot-com-be

./: .env  .gitignore  README.md  consumer.py  docker-compose.yml  entrypoint.sh  main.py  requirements.txt  start_weather_scheduler.bat  weather_scheduler.py
backend/: README.md  pyproject.toml
backend/src/ws/: consumer.py  main.py  run.py
dagster/: README.md  pyproject.toml  setup.cfg  setup.py
dagster/.tmp_dagster_home_c1x8j0xm/history/: runs.db
dagster/.tmp_dagster_home_c1x8j0xm/history/runs/: 08e2a7c4-694e-4d36-b16d-4ecfe0783e48.db  2d591ceb-90e3-411d-984f-6cc4d80099aa.db  7bb4602d-8e1d-46b7-b7f9-3ef64a9e99f9.db  eb8f04e8-2347-44a4-9bc7-01c7324a49ae.db  index.db
dagster/.tmp_dagster_home_c1x8j0xm/schedules/: schedules.db
dagster/data_dagster_project/: assets.py  definitions.py  io_manager.py
dagster/data_dagster_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data/: weather.py
data/enums/: date_range.py
docker/dagster/: Dockerfile
docker/user/: Dockerfile
hadoop/: init-datanode.sh
hadoop/hadoop_config/: core-site.xml  hdfs-site.xml  log4j.properties
pipeline/: .gitignore  README.md  dagster.yaml  jobs.py  ops.py  pyproject.toml  repository.py  resources.py  setup.py  workspace.yaml
pipeline/src/: definitions.py  hdfs_writer.py  locations.py  resources.py
streaming/: init.sql  submit-ksql.sh
